--- a/blog.html
+++ b/blog.html
@@ -57,16 +57,7 @@
   <!--********************************
    		Code Start From Here 
 	******************************** -->
-  <!--==============================
-	Preloader
-	==============================-->
-  <div class="preloader">
-    <button class="vs-btn preloaderCls">Cancel Preloader </button>
-    <div class="preloader-inner">
-      <img src="assets/img/logo.svg" alt="logo">
-      <span class="loader"></span>
-    </div>
-  </div>
+  <!-- Preloader disabled for better user experience -->
   <!--==============================
 		Mobile Menu
 	============================== -->
